# nritya

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/nritya/: __init__.py  cli.py  models.py  report.py
src/nritya/analyzer/: __init__.py  corrector.py  pose.py
src/nritya/dance/: __init__.py  forms.py  mudras.py  poses.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_nritya.py
